--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@types/node": "^22.13.0",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
+    "@vercel/analytics": "^1.5.0",
     "aos": "3.0.0-beta.6",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.536.0",
     "next": "15.1.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1",
     "typescript": "^5.7.3"
   },
