--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@vercel/analytics": "^1.5.0",
     "aos": "3.0.0-beta.6",
     "framer-motion": "^12.23.12",
+    "googleapis": "^154.1.0",
     "lucide-react": "^0.536.0",
     "next": "15.1.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1",
+    "resend": "^4.7.0",
     "typescript": "^5.7.3"
   },
   "devDependencies": {
